syntax = "proto3";

option go_package = "proto/shortlink";

import "google/protobuf/wrappers.proto";

package shortlink.v1;

message Void {}

message Link {
    uint64 id = 1;
    string url = 2;
    string hash = 3;
}

message Links {
    repeated Link link = 1;
}

message LimitOffset {
    uint64 limit = 1;
    uint64 offset = 2;
}

service ShortLink {
    rpc Create(google.protobuf.StringValue) returns (Link);
    rpc GetByHash(google.protobuf.StringValue) returns (Link);
    rpc GetById(google.protobuf.UInt64Value) returns (Link);
    rpc GetAll(LimitOffset) returns (Links);
    rpc Update(Link) returns (Link);
    rpc Delete(google.protobuf.UInt64Value) returns (Void);
    rpc Count(Void) returns (google.protobuf.UInt64Value);
}